<resources>

    <string name="app_name">Stocks</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="stock_title">Stock App</string>
    <string name="TVProfitLoss">No Data</string>
    <string name="TVMessage"></string>
    <string name="TVCompanyNames"><![CDATA[Loading....]]></string>
    <string name="TVPrices"><![CDATA[Loading....]]></string>
    <string name="TVTotal"><![CDATA[Total]]></string>
    <string name="TVPortfolio"><![CDATA[<< PORTFOLIO >>]]></string>
    <string name="TVTotalWorth"><![CDATA[<< TOTAL WORTH >>]]></string>
    <string name="TVWeeklyProfitLoss"><![CDATA[<< WEEKLY + / - >>]]></string>
    <string name="btnRight">>></string>
    <string name="btnLeft"><![CDATA[<<]]></string>
        

</resources>