<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000" >

    <Button
        android:id="@+id/btnRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="85dp"
        android:background="#000000"
        android:text="@string/btnRight"
        android:textColor="@android:color/white"
        android:textSize="43dp" />

    <Button
        android:id="@+id/btnLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnRight"
        android:layout_alignBottom="@+id/btnRight"
        android:layout_alignParentLeft="true"
        android:background="#000000"
        android:text="@string/btnLeft"
        android:textColor="@android:color/white"
        android:textSize="43dp" />

    <TextView
        android:id="@+id/TVPortfolio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/TVPortfolio"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textSize="33dp" />

    <TextView
        android:id="@+id/TVCompanyNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TVPortfolio"
        android:layout_below="@+id/TVPortfolio"
        android:layout_marginTop="114dp"
        android:text="@string/TVCompanyNames"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/TVPrices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TVCompanyNames"
        android:layout_alignBottom="@+id/TVCompanyNames"
        android:layout_alignRight="@+id/TVPortfolio"
        android:text="@string/TVPrices"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/TVMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/TVMessage"
        android:textColor="@android:color/white" />

</RelativeLayout>
