<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000" >
    
    
    
    <Button
        android:id="@+id/btnRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="85dp"
        android:textColor="@android:color/white" 
        android:background="#000000"
        android:textSize="45dp"
        android:text="@string/btnRight" />

    <Button
        android:id="@+id/btnLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnRight"
        android:layout_alignBottom="@+id/btnRight"
        android:layout_alignParentLeft="true"
        android:textColor="@android:color/white"
		android:background="#000000"
		android:textSize="45dp"
        android:text="@string/btnLeft" />

    <TextView
        android:id="@+id/TVTotalWorth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textSize="33dp" 
        android:text="@string/TVTotalWorth"/>

    <TextView
        android:id="@+id/TVTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TVTotalWorth"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="108dp"
        android:layout_toRightOf="@+id/btnLeft"
        android:text="@string/TVTotal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textSize="29dp" />

    <TextView
        android:id="@+id/TVMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/TVMessage"
        android:textColor="@android:color/white" />

</RelativeLayout>